feat: GC垃圾回收器配置案例